disabled forcing 0 paddings to allow user defined paddings on the table's TD element.

--- a/css/scrollableFixedHeaderTable.css
+++ b/css/scrollableFixedHeaderTable.css
@@ -7,10 +7,10 @@
 .sfhtTable {
 	border: 1px solid #CCCCCC;
 }
-.sfhtTable table tr, .sfhtTable tr td {
+/*.sfhtTable table tr, .sfhtTable tr td {
 	padding: 0;
 	margin: 0;
-}
+}*/
 .sfhtHeader {
 	position: absolute;
 	overflow: hidden;
